import { createFilterStructure } from "@dashboard/discounts/components/VoucherListPage";
import { VoucherListUrlFilters } from "@dashboard/discounts/urls";
import { date } from "@dashboard/fixtures";
import { DiscountStatusEnum, VoucherDiscountType } from "@dashboard/graphql";
import { getFilterQueryParams } from "@dashboard/utils/filters";
import { stringifyQs } from "@dashboard/utils/urls";
import { getExistingKeys, setFilterOptsStatus } from "@test/filters";
import { testIntlInstance } from "@test/intl";

import { getFilterQueryParam, getFilterVariables } from "./filters";

describe("Filtering query params", () => {
  it("should be empty object if no params given", () => {
    const params: VoucherListUrlFilters = {};
    const filterVariables = getFilterVariables(params);

    expect(getExistingKeys(filterVariables)).toHaveLength(0);
  });
  it("should not be empty object if params given", () => {
    const params: VoucherListUrlFilters = {
      startedFrom: date.from,
      startedTo: date.to,
      status: ["ACTIVE", "EXPIRED"],
      timesUsedFrom: date.from,
      timesUsedTo: date.to,
      type: ["FIXED", "SHIPPING"],
    };
    const filterVariables = getFilterVariables(params);

    expect(getExistingKeys(filterVariables)).toHaveLength(4);
  });
});
describe("Filtering URL params", () => {
  const intl = testIntlInstance;
  const filters = createFilterStructure(intl, {
    channel: {
      active: false,
      choices: [
        {
          value: "default-channel",
          label: "Default channel",
        },
      ],
      value: "default-channel",
    },
    saleType: {
      active: false,
      value: ["FIXED", "SHIPPING"],
    },
    started: {
      active: false,
      value: {
        max: date.to,
        min: date.from,
      },
    },
    status: {
      active: false,
      value: ["ACTIVE", "EXPIRED"],
    },
    timesUsed: {
      active: false,
      value: {
        max: "6",
        min: "1",
      },
    },
  });

  it("should be empty if no active filters", () => {
    const filterQueryParams = getFilterQueryParams(filters, getFilterQueryParam);

    expect(getExistingKeys(filterQueryParams)).toHaveLength(0);
  });
  it("should not be empty if active filters are present", () => {
    const filterQueryParams = getFilterQueryParams(
      setFilterOptsStatus(filters, true),
      getFilterQueryParam,
    );

    expect(filterQueryParams).toMatchSnapshot();
    expect(stringifyQs(filterQueryParams)).toMatchSnapshot();
  });
});
