// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Filtering URL params > should not be empty if active filters are present 1`] = `
{
  "channel": "default-channel",
  "startedFrom": "2019-12-09",
  "startedTo": "2019-12-38",
  "status": [
    "ACTIVE",
    "EXPIRED",
  ],
  "timesUsedFrom": "1",
  "timesUsedTo": "6",
  "type": [
    "FIXED",
    "SHIPPING",
  ],
}
`;

exports[`Filtering URL params > should not be empty if active filters are present 2`] = `"channel=default-channel&startedFrom=2019-12-09&startedTo=2019-12-38&timesUsedFrom=1&timesUsedTo=6&status%5B0%5D=ACTIVE&status%5B1%5D=EXPIRED&type%5B0%5D=FIXED&type%5B1%5D=SHIPPING"`;

exports[`Filtering URL params should not be empty if active filters are present 1`] = `
Object {
  "channel": "default-channel",
  "startedFrom": "2019-12-09",
  "startedTo": "2019-12-38",
  "status": Array [
    "ACTIVE",
    "EXPIRED",
  ],
  "timesUsedFrom": "1",
  "timesUsedTo": "6",
  "type": Array [
    "FIXED",
    "SHIPPING",
  ],
}
`;

exports[`Filtering URL params should not be empty if active filters are present 2`] = `"channel=default-channel&startedFrom=2019-12-09&startedTo=2019-12-38&timesUsedFrom=1&timesUsedTo=6&status%5B0%5D=ACTIVE&status%5B1%5D=EXPIRED&type%5B0%5D=FIXED&type%5B1%5D=SHIPPING"`;
